image publishing now, probably not correct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,11 @@ install(DIRECTORY
     launch
     DESTINATION share/${PROJECT_NAME}
 )
+ 
+install(DIRECTORY
+    config
+    DESTINATION share/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_cmake REQUIRED)
