--- a/config/example.yaml
+++ b/config/example.yaml
@@ -6,7 +6,7 @@ spinnaker_node: # must match name of node
   ros__parameters: # mandatory for ROS2
     camera_groups: [ "stereo_camera_1", "group2" ]
     stereo_camera_1:
-      cameras: [ "grasshopper", "blackfly_s" ]
+      cameras: [ "blackfly_s" ]
       grasshopper:
         serial: "17274483"
       blackfly_s:
