fixed crash on exit

--- a/config/grasshopper.cfg
+++ b/config/grasshopper.cfg
@@ -9,3 +9,6 @@ exposure_time   float "AcquisitionControl/ExposureTime"
 
 frame_rate_auto enum  "AcquisitionControl/AcquisitionFrameRateAuto"
 frame_rate      float "AcquisitionControl/AcquisitionFrameRate"
+
+# NOTE: ..Enabled vs ..Enable on the blackfly_s
+frame_rate_enable bool  "AcquisitionControl/AcquisitionFrameRateEnabled"
