--- a/config/blackfly_s.cfg
+++ b/config/blackfly_s.cfg
@@ -15,3 +15,34 @@ exposure_time   float "AcquisitionControl/ExposureTime"
 
 frame_rate_enable bool  "AcquisitionControl/AcquisitionFrameRateEnable"
 frame_rate        float "AcquisitionControl/AcquisitionFrameRate"
+
+# black wire: opto-isolated input
+line0_selector enum "DigitalIOControl/LineSelector"
+
+# white wire: opto-isolated output
+line1_selector enum "DigitalIOControl/LineSelector"
+line1_linemode enum "DigitalIOControl/LineMode"
+
+# red wire: non-isolated input/output and power output
+line2_selector enum "DigitalIOControl/LineSelector"
+line2_v33enable bool "DigitalIOControl/V3_3Enable"
+
+# green wire: aux voltage input and non-isolated input
+line3_selector enum "DigitalIOControl/LineSelector"
+line3_linemode enum "DigitalIOControl/LineMode"
+
+# valid values are e.g. "FrameStart", "AcquisitionStart", "FrameBurstStart"
+trigger_selector enum "AcquisitionControl/TriggerSelector"
+
+# valid values are "On" and "Off"
+trigger_mode  enum "AcquisitionControl/TriggerMode"
+
+# valid values are "Line<0,1,2>", "UserOutput<0,1,2>", "Counter<0,1><Start/End>",
+# "LogicBlock<0,1>
+trigger_source  enum "AcquisitionControl/TriggerSource"
+
+# value >= 9 
+trigger_delay float "AcquisitionControl/TriggerDelay"
+
+# valid values: "Off" and "ReadOut"
+trigger_overlap enum "AcquisitionControl/TriggerOverlap"
