--- a/config/grasshopper.cfg
+++ b/config/grasshopper.cfg
@@ -1,12 +1,16 @@
 #
 # config file for Grasshopper cameras (tested for USB3)
 #
+
+# enum values: Continuous and Off
 gain_auto       enum  "AnalogControl/GainAuto"
 gain            float "AnalogControl/Gain"
 
+# enum values: Continuous and Off
 exposure_auto   enum  "AcquisitionControl/ExposureAuto"
 exposure_time   float "AcquisitionControl/ExposureTime"
 
+# enum values: Continuous and Off
 frame_rate_auto enum  "AcquisitionControl/AcquisitionFrameRateAuto"
 frame_rate      float "AcquisitionControl/AcquisitionFrameRate"
 
