--- a/config/blackfly_s.cfg
+++ b/config/blackfly_s.cfg
@@ -4,23 +4,34 @@
 # This file maps the ros parameters to the corresponding "nodes" in the camera.
 # The question remains what the valid values are for the enum types. For that
 # use the spinnaker GUI (spinview), or dump the nodemap by setting the
-# "dump_node_map" parameter in the driver.
+# "dump_node_map" parameter in the driver. Also setting the "debug" param helps.
+#
+# NOTE: !!!!  THE ORDER OF PARAMETER DEFINITION MATTERS !!!!
+# On node startup, the parameters will be declared and initialized
+# in the order listed here. For instance you must list
+# the enum "exposure_auto" before the float "exposure_time" because on
+# startup, "exposure_auto" must first be set to "Off" before
+# "exposure_time" can be set, or else the camera refuses to set
+# the exposure time.
+#
+
+#
+# -------- analog control
 #
 
 gain_auto       enum  "AnalogControl/GainAuto"
 gain            float "AnalogControl/Gain"
 
-exposure_auto   enum  "AcquisitionControl/ExposureAuto"
-exposure_time   float "AcquisitionControl/ExposureTime"
-
-frame_rate_enable bool  "AcquisitionControl/AcquisitionFrameRateEnable"
-frame_rate        float "AcquisitionControl/AcquisitionFrameRate"
+#
+# -------- digital IO control
+#
 
 # black wire: opto-isolated input
 line0_selector enum "DigitalIOControl/LineSelector"
 
 # white wire: opto-isolated output
 line1_selector enum "DigitalIOControl/LineSelector"
+# valid values: "Input", "Output"
 line1_linemode enum "DigitalIOControl/LineMode"
 
 # red wire: non-isolated input/output and power output
@@ -29,7 +40,18 @@ line2_v33enable bool "DigitalIOControl/V3_3Enable"
 
 # green wire: aux voltage input and non-isolated input
 line3_selector enum "DigitalIOControl/LineSelector"
+# valid values: "Input", "Output"
 line3_linemode enum "DigitalIOControl/LineMode"
+
+#
+# -------- acquisition control
+#
+
+exposure_auto   enum  "AcquisitionControl/ExposureAuto"
+exposure_time   float "AcquisitionControl/ExposureTime"
+
+frame_rate_enable bool  "AcquisitionControl/AcquisitionFrameRateEnable"
+frame_rate        float "AcquisitionControl/AcquisitionFrameRate"
 
 # valid values are e.g. "FrameStart", "AcquisitionStart", "FrameBurstStart"
 trigger_selector enum "AcquisitionControl/TriggerSelector"
@@ -46,3 +68,25 @@ trigger_delay float "AcquisitionControl/TriggerDelay"
 
 # valid values: "Off" and "ReadOut"
 trigger_overlap enum "AcquisitionControl/TriggerOverlap"
+
+#
+# --------- chunk control
+#
+
+chunk_mode_active bool "ChunkDataControl/ChunkModeActive"
+
+# valid values: "FrameID"
+chunk_selector_frame_id enum "ChunkDataControl/ChunkSelector"
+chunk_enable_frame_id bool "ChunkDataControl/ChunkEnable"
+
+# valid values: "ExposureTime"
+chunk_selector_exposure_time enum "ChunkDataControl/ChunkSelector"
+chunk_enable_exposure_time bool "ChunkDataControl/ChunkEnable"
+
+# valid values: "Gain"
+chunk_selector_gain enum "ChunkDataControl/ChunkSelector"
+chunk_enable_gain bool "ChunkDataControl/ChunkEnable"
+
+# valid values: "Timestamp"
+chunk_selector_timestamp enum "ChunkDataControl/ChunkSelector"
+chunk_enable_timestamp bool "ChunkDataControl/ChunkEnable"
