--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
   <version>1.0.0</version>
   <description>ROS2 driver for flir spinnaker sdk</description>
   <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
-  <license>MIT</license>
+  <license>Apache-2</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
