Added RGB8 pixel_format for colored visualization in rviz2

--- a/config/chameleon.cfg
+++ b/config/chameleon.cfg
@@ -42,6 +42,12 @@ line3_selector enum "DigitalIOControl/LineSelector"
 line3_linemode enum "DigitalIOControl/LineMode"
 
 #
+# --------- image format control
+#
+
+pixel_format enum "ImageFormatControl/PixelFormat"
+
+#
 # -------- acquisition control
 #
 
