--- a/config/chameleon.cfg
+++ b/config/chameleon.cfg
@@ -45,6 +45,12 @@ line3_linemode enum "DigitalIOControl/LineMode"
 # --------- image format control
 #
 
+offset_x int "ImageFormatControl/OffsetX"
+offset_y int "ImageFormatControl/OffsetY"
+
+image_width int "ImageFormatControl/Width"
+image_height int "ImageFormatControl/Height"
+
 pixel_format enum "ImageFormatControl/PixelFormat"
 
 #
