--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,5 +21,5 @@ jobs:
         with:
           fetch-depth: 0
       - name: compile from source
-        run: git checkout master && ./.github/scripts/build_ros2.bash
+        run: ./.github/scripts/build_ros2.bash
   
