--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - name: check out github repo
         uses: actions/checkout@v3
+        working-directory: src/flir_spinnaker_ros2
         with:
           fetch-depth: 0
       - name: compile from source
