--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,8 +20,8 @@ jobs:
     steps:
       - name: check out github repo
         uses: actions/checkout@v3
-        working-directory: src/flir_spinnaker_ros2
         with:
+          path: src/flir_spinnaker_ros2
           fetch-depth: 0
       - name: compile from source
         run: ./.github/scripts/build_ros2.bash
