--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,5 +24,5 @@ jobs:
           path: src/flir_spinnaker_ros2
           fetch-depth: 0
       - name: compile from source
-        run: ./.github/scripts/build_ros2.bash
+        run: ./src/flir_spinnaker_ros2/.github/scripts/build_ros2.bash
   
