--- a/.github/docker/Dockerfile.jammy_humble_spinnaker
+++ b/.github/docker/Dockerfile.jammy_humble_spinnaker
@@ -20,8 +20,8 @@ RUN apt-get -y install software-properties-common apt-utils
 #
 RUN apt-get -y install python3-osrf-pycommon ros-${ROS2_VERSION}-image-transport ros-${ROS2_VERSION}-cv-bridge ros-${ROS2_VERSION}-sensor-msgs ros-${ROS2_VERSION}-std-msgs ros-${ROS2_VERSION}-rosbag2* ros-${ROS2_VERSION}-tf2-ros ros-${ROS2_VERSION}-image-geometry ros-${ROS2_VERSION}-tf2-geometry-msgs ros-${ROS2_VERSION}-camera-info-manager
 
-# colcon
-RUN apt-get -y install python3-colcon-common-extensions
+# wstool and colcon
+RUN apt-get -y install python3-colcon-common-extensions python3-wstool
 
 #
 # some additional ubuntu packages:
