choose better names for workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-20.04
     container:
       image: berndpfrommer/focal_noetic_galactic_build
-    name: build repo under ROS2 from source on focal
+    name: build under focal / galactic
     steps:
       - name: check out github repo
         uses: actions/checkout@v3
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-22.04
     container:
       image: berndpfrommer/jammy_humble_spinnaker
-    name: build repo under ROS2 from source on jammy
+    name: build under jammy / humble
     steps:
       - name: check out github repo
         uses: actions/checkout@v3
