--- a/.github/docker/Dockerfile.focal_noetic_galactic_build
+++ b/.github/docker/Dockerfile.focal_noetic_galactic_build
@@ -25,7 +25,7 @@ RUN apt-get -y install python3-osrf-pycommon python3-catkin-tools ros-${ROS1_VER
 #
 # some additional ROS2 packages
 #
-RUN apt-get -y install python3-osrf-pycommon python3-catkin-tools ros-${ROS2_VERSION}-image-transport ros-${ROS2_VERSION}-cv-bridge ros-${ROS2_VERSION}-sensor-msgs ros-${ROS2_VERSION}-std-msgs ros-${ROS2_VERSION}-rosbag2* ros-${ROS2_VERSION}-tf2-ros ros-${ROS2_VERSION}-image-geometry ros-${ROS2_VERSION}-tf2-geometry-msgs ros-${ROS2_VERSION}-camera-info-manager
+RUN apt-get -y install python3-osrf-pycommon python3-catkin-tools ros-${ROS2_VERSION}-image-transport ros-${ROS2_VERSION}-cv-bridge ros-${ROS2_VERSION}-sensor-msgs ros-${ROS2_VERSION}-std-msgs ros-${ROS2_VERSION}-rosbag2* ros-${ROS2_VERSION}-tf2-ros ros-${ROS2_VERSION}-image-geometry ros-${ROS2_VERSION}-tf2-geometry-msgs ros-${ROS2_VERSION}-camera-info-manager ros-${ROS2_VERSION}-ament-clang-format
 
 # colcon
 RUN apt-get -y install python3-colcon-common-extensions
