--- a/.github/docker/Dockerfile.jammy_humble_spinnaker
+++ b/.github/docker/Dockerfile.jammy_humble_spinnaker
@@ -18,7 +18,7 @@ RUN apt-get -y install software-properties-common apt-utils
 #
 # some additional ROS2 packages
 #
-RUN apt-get -y install python3-osrf-pycommon ros-${ROS2_VERSION}-image-transport ros-${ROS2_VERSION}-cv-bridge ros-${ROS2_VERSION}-sensor-msgs ros-${ROS2_VERSION}-std-msgs ros-${ROS2_VERSION}-rosbag2* ros-${ROS2_VERSION}-tf2-ros ros-${ROS2_VERSION}-image-geometry ros-${ROS2_VERSION}-tf2-geometry-msgs ros-${ROS2_VERSION}-camera-info-manager ros-${ROS2_VERSION}-ament-clang-format
+RUN apt-get -y install python3-osrf-pycommon ros-${ROS2_VERSION}-image-transport ros-${ROS2_VERSION}-cv-bridge ros-${ROS2_VERSION}-sensor-msgs ros-${ROS2_VERSION}-std-msgs ros-${ROS2_VERSION}-rosbag2* ros-${ROS2_VERSION}-tf2-ros ros-${ROS2_VERSION}-image-geometry ros-${ROS2_VERSION}-tf2-geometry-msgs ros-${ROS2_VERSION}-camera-info-manager ros-${ROS2_VERSION}-ament-clang-format ros-${ROS2_VERSION}-ament-cmake-clang-format
 
 # wstool and colcon
 RUN apt-get -y install python3-colcon-common-extensions python3-wstool
