--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ if(BUILD_TESTING)
   find_package(ament_cmake_flake8 REQUIRED)
   find_package(ament_cmake_lint_cmake REQUIRED)
   find_package(ament_cmake_pep257 REQUIRED)
-  # find_package(ament_cmake_clang_format REQUIRED)
+  find_package(ament_cmake_clang_format REQUIRED)
   find_package(ament_cmake_xmllint REQUIRED)
 
   ament_copyright()
@@ -97,7 +97,7 @@ if(BUILD_TESTING)
   ament_flake8()
   ament_lint_cmake()
   ament_pep257()
-  # ament_clang_format(CONFIG_FILE .clang-format)
+  ament_clang_format(CONFIG_FILE .clang-format)
   ament_xmllint()
 endif()
 
