--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,11 +12,25 @@ on:
     branches: [ master]
 
 jobs:
-  build_focal_ros2:
+  build_focal_galactic:
     runs-on: ubuntu-20.04
     container:
       image: berndpfrommer/focal_noetic_galactic_spinnaker
     name: build under focal / galactic
+    steps:
+      - name: check out github repo
+        uses: actions/checkout@v3
+        with:
+          path: src/flir_spinnaker_ros2
+          fetch-depth: 0
+      - name: compile from source
+        run: ./src/flir_spinnaker_ros2/.github/scripts/build_ros2.bash
+  
+  build_focal_foxy:
+    runs-on: ubuntu-20.04
+    container:
+      image: berndpfrommer/focal_foxy_spinnaker
+    name: build under focal / foxy
     steps:
       - name: check out github repo
         uses: actions/checkout@v3
