blackfly_s: add config for throughput limiting

--- a/config/blackfly_s.cfg
+++ b/config/blackfly_s.cfg
@@ -23,6 +23,12 @@ gain_auto       enum  "AnalogControl/GainAuto"
 gain            float "AnalogControl/Gain"
 
 #
+# -------- device link throughput limiting
+#
+
+device_link_throughput_limit int "DeviceControl/DeviceLinkThroughputLimit"
+
+#
 # -------- digital IO control
 #
 
