added more pixel formats

--- a/config/blackfly_s.cfg
+++ b/config/blackfly_s.cfg
@@ -16,6 +16,14 @@
 #
 
 #
+# -------- pixel format
+#
+# Check available values with SpinView. Not all are supported by ROS!
+# Some formats are e.g. "Mono8", "BayerRG8", "BGR8", "BayerRG16"
+# default is "BayerRG8"
+pixel_format enum "ImageFormatControl/PixelFormat"
+
+#
 # -------- analog control
 #
 
