add image size options for blackfly S

--- a/config/blackfly_s.cfg
+++ b/config/blackfly_s.cfg
@@ -24,6 +24,17 @@
 pixel_format enum "ImageFormatControl/PixelFormat"
 
 #
+# ---------- (reduce) sensor size and change offset
+#
+image_width int "ImageFormatControl/Width"
+image_height int "ImageFormatControl/Height"
+
+#(offset must come after image width reduction!)
+offset_x int "ImageFormatControl/OffsetX"
+offset_y int "ImageFormatControl/OffsetY"
+
+
+#
 # -------- analog control
 #
 
